# beneuro_experimental_data_organization

./: .gitignore  README.md  __main__.py  noxfile.py  pyproject.toml
.github/workflows/: run_tests.yml  test_with_processing.yml
src/beneuro_data/: cli.py  config.py  data_transfer.py  data_transfer_helpers.py  data_validation.py  extra_file_handling.py  folder_io.py  folder_size.py  query_sessions.py  rename_extra_files.py  spike_sorting.py  subject_sessions.py  trialdata_formatting.py  update_bnd.py  validate_argument.py  video_renaming.py
src/beneuro_data/conversion/: __init__.py  animal_profile_interface.py  anipose_interface.py  beneuro_converter.py  convert_nwb_to_pyaldata.py  convert_to_nwb.py  convert_to_trialdata.py  gpu_memory.py  multiprobe_kilosort_interface.py  pycontrol_data_import.py  pycontrol_interface.py
tests/: generate_directory_structure_test_cases.py  test_anipose_interface.py  test_data_transfer.py  test_data_validation.py  test_download.py  test_extra_file_renaming.py  test_last_session.py  test_listing_sessions_on_day.py  test_validate_argument.py  test_video_renaming.py
tests/conversion/: test_anipose_interface.py  test_nwb_conversion.py
tests/directory_structure_test_yamls/: M011_correct.yaml  M011_error_not_only_probe_folders_in_ephys_recording.yaml  M011_error_pca_name.yaml  M011_error_probe_folder_name.yaml  M011_extra_comment_txt.yaml  M011_missing_video_metadata.yaml  M011_no_video_files_in_folder.yaml  M011_old_video_naming.yaml  M011_trajectory_and_channel_map_in_probe.yaml  M011_two_recordings.yaml  M011_unexpected_txt_in_root.yaml  M011_videos_in_root.yaml  M011_videos_in_root_and_wrong_name.yaml  M011_wrong_video_filenames.yaml  M011_wrong_video_folder.yaml  M015.yaml  M015_error_no_task_py_file.yaml  M015_error_number_of_pca_files.yaml  M015_error_session_date_format.yaml  M015_error_session_folder_start_with_subject.yaml  M015_error_session_folder_underscore_after_subject.yaml  M015_error_two_task_py_files.yaml  M015_warn_no_task_folder.yaml  M016.yaml
tests/download_raw_session_test_yamls/: M011_correct.yaml  M011_no_ephys.yaml  M011_no_extra_files.yaml  M011_no_videos.yaml  M011_wrong_behavior.yaml
tests/extra_file_renaming_test_yamls/: both_short_and_renamed_already_exist.yaml  files_in_root_happy.yaml  trajectory_and_channel_map.yaml  trajectory_with_name_already_good.yaml  unexpected_files_in_root.yaml
tests/list_days_sessions_test_yamls/: treadmill_calibration_to_ignore.yaml  two_sessions.yaml
tests/number_of_valid_sessions_test_yamls/: M011.yaml  M111.yaml
tests/subject_session_list_yamls/: happy_case.yaml  happy_case_same_date.yaml  last_one_has_wrong_date_format.yaml
tests/test_data/: M030_2024_04_12_09_40_3dpts_angles.csv
tests/upload_raw_session_test_yamls/: M011_correct.yaml  M011_correct_but_no_behavior.yaml  M011_correct_but_no_ephys.yaml  M011_correct_but_no_videos.yaml  M011_with_comment_txt.yaml  M011_with_extra_txt_files.yaml  M011_with_traj_plan_txt.yaml  M011_wrong_video_folder_name.yaml
