[tool.poetry]
name = "beneuro-data"
version = "0.1.0"
description = "Managing the experimental data recorded in the BeNeuro Lab"
authors = ["Bence Bagi <b.bagi20@imperial.ac.uk>"]
readme = "README.md"
packages = [{include = "beneuro_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "1.*"
typer = "^0.9.0"
rich = "^13.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
"ruamel.yaml" = "^0.17.32"
black = "*"

[tool.poetry.group.processing]
optional = true

[tool.poetry.group.processing.dependencies]
numba = "^0.58.0"
cuda-python = "^12.2.0"
docker = "^6.1.3"
spikeinterface = "^0.99.1"
neuroconv = {extras = ["kilosort", "phy", "spikeglx"], version = "^0.4.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bnd = "beneuro_data.cli:app"

[tool.black]
line-length = 92

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*No correctly named video folder found*:UserWarning",
    "ignore:.*No PyControl task folder found*:UserWarning",
    "ignore:.*More than one raw ephys recordings found*:UserWarning",
]
