[tool.poetry]
name = "beneuro-data"
version = "0.1.0"
description = "Managing the experimental data recorded in the BeNeuro Lab"
authors = ["Bence Bagi <b.bagi20@imperial.ac.uk>"]
readme = "README.md"
packages = [{include = "beneuro_data", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
typer = "^0.9.0"
rich = "^13.7.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
"ruamel.yaml" = "^0.17.32"
black = "*"

[tool.poetry.group.processing]
optional = true

[tool.poetry.group.processing.dependencies]
cuda-python = "^12.2.0"
docker = "^7.1.0"
spikeinterface = "0.101"
neuroconv = {extras = ["kilosort", "phy", "spikeglx"], version = "^0.4.8"}
ndx-pose = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bnd = "beneuro_data.cli:app"

[tool.black]
line-length = 92

[tool.ruff]
line-length = 92

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*No correctly named video folder found*:UserWarning",
    "ignore:.*No PyControl task folder found*:UserWarning",
    "ignore:.*More than one raw ephys recordings found*:UserWarning",
]
markers = [
    "processing: These tests are only required when installing with the processing modules.",
]
